<resources>
    <string name="app_name">MyIntentApp</string>
    <string name="pindah_activity">Pindah Activity</string>
    <string name="move_with_data">Move With Data</string>
    <string name="move_with_object">Move With Object</string>
    <string name="object_received">Object Received</string>
    <string name="dial_number">Dial Number</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="_150">150</string>
    <string name="_200">200</string>
    <string name="choose">pilih</string>
    <string name="move_with_result">Pindah Activity Untuk Result</string>
    <string name="result_from_activity">Hasil Dari Activity</string>
</resources>